[gd_scene load_steps=26 format=2]

[ext_resource path="res://Audio/Sound Objects/SoundQueue.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/ItemDetector.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://LightGlow.tscn" type="PackedScene" id=6]
[ext_resource path="res://Math.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/OrbPointer.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Player.png" type="Texture" id=9]
[ext_resource path="res://Audio/Files/PlayerWalk.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/Files/PlayerPickup.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/Files/PlayerDrop.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/Files/WeaponAttack.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/Files/ItemUsed.wav" type="AudioStream" id=14]
[ext_resource path="res://Player/DialogueInteractionDetector.tscn" type="PackedScene" id=15]
[ext_resource path="res://UI/DialogueLayer.tscn" type="PackedScene" id=16]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 18, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 36, 0, 18, 18 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 54, 0, 18, 18 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Animate",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 8, 9 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 33, 19 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 7 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="DialogueLayer" parent="." instance=ExtResource( 16 )]
position = Vector2( 0, -34 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "Animate"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 5 )
shape = SubResource( 6 )

[node name="ItemDetector" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="ItemDetector" index="0"]
shape = SubResource( 7 )

[node name="DialogueInteractionDetector" parent="." instance=ExtResource( 15 )]
visible = false
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" parent="DialogueInteractionDetector" index="0"]
shape = SubResource( 8 )

[node name="ItemSlot" type="Node2D" parent="."]
position = Vector2( 0, 4 )

[node name="WeaponAttackPos" type="Position2D" parent="."]
rotation = 3.14159

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, 0 )
shape = SubResource( 9 )

[node name="Light" parent="." instance=ExtResource( 6 )]
position = Vector2( -1, 0 )
start_scale = 1.5

[node name="Math" parent="." instance=ExtResource( 7 )]

[node name="OrbPointer" parent="." instance=ExtResource( 8 )]
visible = false

[node name="FootstepSoundQueue" parent="." instance=ExtResource( 1 )]
count = 4

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootstepSoundQueue"]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="DropSoundQueue" parent="." instance=ExtResource( 1 )]
count = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DropSoundQueue"]
stream = ExtResource( 12 )
volume_db = -20.0

[node name="PickupSoundQueue" parent="." instance=ExtResource( 1 )]
count = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PickupSoundQueue"]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="WeaponAttackSoundQueue" parent="." instance=ExtResource( 1 )]
count = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="WeaponAttackSoundQueue"]
stream = ExtResource( 13 )
volume_db = -10.0

[node name="ItemUsedSoundQueue" parent="." instance=ExtResource( 1 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ItemUsedSoundQueue"]
stream = ExtResource( 14 )
volume_db = -15.0
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="ItemDetector"]

[editable path="DialogueInteractionDetector"]

[editable path="Hurtbox"]
